--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
+  <script src="bundle.js" ></script>
   <div id="root"></div>
-  <script src="/bundle.js" ></script>
 </body>
 </html>
